--- a/Makefile.example
+++ b/Makefile.example
@@ -1,19 +1,42 @@
 
-example.so:	example.cpp VamPipeAdapter.h VamPipePluginLibrary.h VamPipePluginLibrary.cpp
-		c++ -std=c++11 -fPIC \
-		-I../vamp-plugin-sdk -I.. -I../json \
-		-Wall -Wextra -g \
-		-shared -Wl,-Bsymbolic -Wl,-soname=example.so -Wl,-z,defs -Wl,--version-script=vampipe.map \
-		example.cpp \
-		VamPipePluginLibrary.cpp \
+ADAPTER_HEADERS	:= VamPipeAdapter.h VamPipePluginLibrary.h 
+ADAPTER_SOURCES	:= VamPipePluginLibrary.cpp
+
+PLUGIN_SOURCES	:= \
 		../vamp-plugin-sdk/examples/ZeroCrossing.cpp \
 		../vamp-plugin-sdk/examples/SpectralCentroid.cpp \
 		../vamp-plugin-sdk/examples/PercussionOnsetDetector.cpp \
 		../vamp-plugin-sdk/examples/FixedTempoEstimator.cpp \
 		../vamp-plugin-sdk/examples/AmplitudeFollower.cpp \
-		../vamp-plugin-sdk/examples/PowerSpectrum.cpp \
-		../json/json11/json11.cpp \
+		../vamp-plugin-sdk/examples/PowerSpectrum.cpp
+
+OTHER_SOURCES	:= \
+		../json/json11/json11.cpp
+
+SDK_LIBS	:= \
 		../vamp-plugin-sdk/libvamp-hostsdk.a \
-		../vamp-plugin-sdk/libvamp-sdk.a \
-		-o example.so
+		../vamp-plugin-sdk/libvamp-sdk.a
+
+EXAMPLE_EXT	:= .so
+EXAMPLE		:= example$(EXAMPLE_EXT)
+EXAMPLE_SOURCE	:= example.cpp
+EXAMPLE_SOURCES	:= $(EXAMPLE_SOURCE) $(ADAPTER_SOURCES) $(PLUGIN_SOURCES) $(OTHER_SOURCES)
+EXAMPLE_LDFLAGS	:= -shared -Wl,-Bsymbolic -Wl,-soname=example.so -Wl,-z,defs -Wl,--version-script=vampipe.map
+
+TEST		:= quick-test
+TEST_SOURCE	:= quick-test.cpp
+TEST_LDFLAGS	:= -ldl
+
+CXXFLAGS	:= -std=c++11 -fPIC -Wall -Wextra -g
+INCPATH		:= -I../vamp-plugin-sdk -I.. -I../json
+
+all:		$(EXAMPLE) $(TEST)
+		./$(TEST)
+
+$(EXAMPLE):	$(EXAMPLE_SOURCES) $(ADAPTER_HEADERS) $(SDK_LIBS)
+		$(CXX) $(CXXFLAGS) $(INCPATH) -o $(EXAMPLE) \
+		       $(EXAMPLE_SOURCES) $(SDK_LIBS) $(EXAMPLE_LDFLAGS)
+
+$(TEST):	$(TEST_SOURCE)
+		$(CXX) $(CXXFLAGS) -o $(TEST) $(TEST_SOURCE) $(TEST_LDFLAGS)
 
