Force Emscripten to emit the static memory init code inside the JS file. - Emscripten emits it into a separate .mem file for optimised builds, as of 1.12.1 - The file is loaded asyncronously, so occasionally the runtime hadn't initialised before trying to call functions (happened in Chrome, similar to what we've seen before) - This is the easiest fix, without changing the JS for this simple example.

--- a/Makefile.example.emscripten
+++ b/Makefile.example.emscripten
@@ -30,6 +30,7 @@ OTHER_SOURCES	:= \
 		../json/json11/json11.cpp
 
 EMFLAGS		:= \
+		--memory-init-file 0 \
 		-s NO_FILESYSTEM=1 \
 		-s MODULARIZE=1 \
 		-s ERROR_ON_UNDEFINED_SYMBOLS=1 \
