Use power spectrum rather than zero crossings, to exercise the input domain adapter, and make a process request in quick-test.cpp

--- a/Makefile.example.emscripten
+++ b/Makefile.example.emscripten
@@ -49,6 +49,7 @@ EXAMPLE_LDFLAGS	:= $(EMFLAGS)
 CXX		:= em++
 #OPTFLAGS	:= -g3
 OPTFLAGS	:= -O3
+#CXXFLAGS	:= -std=c++11 -fPIC -Wall -Wextra -DSINGLE_PRECISION_FFT $(OPTFLAGS)
 CXXFLAGS	:= -std=c++11 -fPIC -Wall -Wextra $(OPTFLAGS)
 INCPATH		:= -I$(SDK_DIR) -I.. -I../json
 
