--- a/Makefile.example.emscripten
+++ b/Makefile.example.emscripten
@@ -49,10 +49,11 @@ EXAMPLE_LDFLAGS	:= $(EMFLAGS)
 CXX		:= em++
 
 #OPTFLAGS	:= -g3
-OPTFLAGS	:= -O3
+OPTFLAGS	:= -O3 -ffast-math
 
-CXXFLAGS	:= -std=c++11 -fPIC -Wall -Wextra $(OPTFLAGS)
-#CXXFLAGS	:= -std=c++11 -fPIC -Wall -Wextra -DSINGLE_PRECISION_FFT $(OPTFLAGS)
+DEFINES		:= -DSINGLE_PRECISION_FFT
+
+CXXFLAGS	:= -std=c++11 -fPIC -Wall -Wextra $(DEFINES) $(OPTFLAGS)
 
 INCPATH		:= -I$(SDK_DIR) -I.. -I../json
 
@@ -60,8 +61,8 @@ all:		$(EXAMPLE)
 
 $(EXAMPLE):	$(EXAMPLE_SOURCES) $(ADAPTER_HEADERS) $(SDK_SOURCES)
 		$(CXX) $(CXXFLAGS) $(EMFLAGS) $(INCPATH) -o $(EXAMPLE) \
-		       $(EXAMPLE_SOURCES) $(SDK_SOURCES) $(EXAMPLE_LDFLAGS)
-		echo "module.exports=ExampleModule;" >> $(EXAMPLE)
+		       $(EXAMPLE_SOURCES) $(SDK_SOURCES) $(EXAMPLE_LDFLAGS) && \
+		( echo "module.exports=ExampleModule;" >> $(EXAMPLE) )
 
 clean:
 		rm -f $(EXAMPLE) $(EXAMPLE).map
