Make base64/text selectable when serialising process and feature blocks; add base64 version as an output format for vampipe-convert; make VamPipePluginLibrary switch to returning base64 encoding as soon as it is fed any as input

--- a/Makefile.example.emscripten
+++ b/Makefile.example.emscripten
@@ -31,13 +31,13 @@ OTHER_SOURCES	:= \
 
 EMFLAGS		:= \
 		--memory-init-file 0 \
-		-s NO_FILESYSTEM=1 \
 		-s MODULARIZE=1 \
 		-s ERROR_ON_UNDEFINED_SYMBOLS=1 \
 		-s DISABLE_EXCEPTION_CATCHING=0 \
 	    	-s EXPORT_NAME="'ExampleModule'" \
 	    	-s EXPORTED_FUNCTIONS="['_vampipeRequestJson','_vampipeFreeJson']"
 
+#		-s NO_FILESYSTEM=1 \
 # no longer exists?		-s NO_BROWSER=1 
 
 EXAMPLE_EXT	:= .js
