Introduce "raw" process call in which the input is not serialised

--- a/Makefile.example.emscripten
+++ b/Makefile.example.emscripten
@@ -35,7 +35,7 @@ EMFLAGS		:= \
 		-s ERROR_ON_UNDEFINED_SYMBOLS=1 \
 		-s DISABLE_EXCEPTION_CATCHING=0 \
 	    	-s EXPORT_NAME="'ExampleModule'" \
-	    	-s EXPORTED_FUNCTIONS="['_vampipeRequestJson','_vampipeFreeJson']"
+	    	-s EXPORTED_FUNCTIONS="['_vampipeRequestJson','_vampipeProcess','_vampipeFreeJson']"
 
 #		-s NO_FILESYSTEM=1 \
 # no longer exists?		-s NO_BROWSER=1 
