INCPATH -> INCLUDES (is not a simple path, contains the -I flags already)

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -70,18 +70,18 @@ OPTFLAGS	:= -O3 -ffast-math
 
 DEFINES		:= $(DEFINES)
 
-INCPATH		:= -I$(SRC_DIR) -I$(SDK_DIR) -I$(PIPERCPP_DIR) $(INCPATH)
+INCLUDES		:= -I$(SRC_DIR) -I$(SDK_DIR) -I$(PIPERCPP_DIR) $(INCLUDES)
 
 em:	$(EM_MODULE)
 em:	CXX		:= em++
 em:	CC		:= emcc
-em:	CXXFLAGS	:= -std=c++11 -fPIC -Wall -Wextra $(DEFINES) $(OPTFLAGS) $(EMFLAGS) $(INCPATH)
-em:	CFLAGS		:= -fPIC -Wall -Wextra $(DEFINES) $(OPTFLAGS) $(EMFLAGS) $(INCPATH)
+em:	CXXFLAGS	:= -std=c++11 -fPIC -Wall -Wextra $(DEFINES) $(OPTFLAGS) $(EMFLAGS) $(INCLUDES)
+em:	CFLAGS		:= -fPIC -Wall -Wextra $(DEFINES) $(OPTFLAGS) $(EMFLAGS) $(INCLUDES)
 em:	LDFLAGS		:= $(EMFLAGS)
 
 linux:	$(SO_MODULE)
-linux:	CXXFLAGS	:= -std=c++11 -fPIC -Wall -Wextra $(DEFINES) $(OPTFLAGS) $(INCPATH)
-linux:	CFLAGS		:= -fPIC -Wall -Wextra $(DEFINES) $(OPTFLAGS) $(INCPATH)
+linux:	CXXFLAGS	:= -std=c++11 -fPIC -Wall -Wextra $(DEFINES) $(OPTFLAGS) $(INCLUDES)
+linux:	CFLAGS		:= -fPIC -Wall -Wextra $(DEFINES) $(OPTFLAGS) $(INCLUDES)
 linux:	LDFLAGS		:= -shared -Wl,-Bsymbolic -Wl,-soname=$(SO_MODULE) -Wl,-z,defs -Wl,--version-script=$(SRC_DIR)/piper.map -ldl
 
 OBJDIR          := o
@@ -93,11 +93,11 @@ OBJECTS         := $(addprefix $(OBJDIR)/,$(abspath $(ALL_OBJECTS)))
 
 o/%.o:            %.cpp
 		mkdir -p $(dir $@)
-		$(CXX) -c $(INCPATH) $(CXXFLAGS) -o $@ $<
+		$(CXX) -c $(INCLUDES) $(CXXFLAGS) -o $@ $<
 
 o/%.o:            %.c
 		mkdir -p $(dir $@)
-		$(CC) -c $(INCPATH) $(CFLAGS) -o $@ $<
+		$(CC) -c $(INCLUDES) $(CFLAGS) -o $@ $<
 
 $(EM_MODULE):	$(OBJECTS)
 		$(CXX) $(OPTFLAGS) -o $@ $^ $(LDFLAGS) && \
