-ffast-math is not a great idea as a default flag, because some plugins won't work correctly with it. Also allow people to override these

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -67,8 +67,8 @@ EMFLAGS		:= \
 CXX_SOURCES	:= $(MODULE_SOURCE) $(ADAPTER_SOURCES) $(PLUGIN_SOURCES) $(SDK_SOURCES) $(OTHER_SOURCES)
 C_SOURCES	:= $(PLUGIN_C_SOURCES) $(C_SOURCES)
 
-#OPTFLAGS	:= -g3
-OPTFLAGS	:= -O3 -ffast-math
+#OPTFLAGS	?= -g3
+OPTFLAGS	?= -O
 
 DEFINES		:= $(DEFINES)
 INCLUDES	:= -I$(SRC_DIR) -I$(SDK_DIR) -I$(PIPERCPP_DIR) $(INCLUDES)
