Update API usage throughout to match revised framing layout

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -46,7 +46,7 @@ SDK_SOURCES	:= \
 		$(SDK_DIR)/src/vamp-sdk/FFT.cpp
 
 OTHER_SOURCES	:= \
-		$(PIPERCPP_DIR)/json11/json11.cpp
+		$(PIPERCPP_DIR)/ext/json11/json11.cpp
 
 EM_MODULE_EXT	:= .js
 EM_MODULE	:= $(MODULE_NAME)$(EM_MODULE_EXT)
@@ -71,7 +71,7 @@ C_SOURCES	:= $(PLUGIN_C_SOURCES) $(C_SOURCES)
 OPTFLAGS	?= -O
 
 DEFINES		:= $(DEFINES)
-INCLUDES	:= -I$(SRC_DIR) -I$(SDK_DIR) -I$(PIPERCPP_DIR) $(INCLUDES)
+INCLUDES	:= -I$(SRC_DIR) -I$(SDK_DIR) -I$(PIPERCPP_DIR) -I$(PIPERCPP_DIR)/ext $(INCLUDES)
 
 em:	$(EM_MODULE)
 em:	CXX		:= em++
