Emscripten won't compile anything the first time it's run after installation. Try forcing the issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
   - ( cd ../ ; git clone https://github.com/piper-audio/piper )
   - ( cd ../ ; git clone https://github.com/piper-audio/piper-cpp )
   - ( cd ../ ; hg clone https://code.soundsoftware.ac.uk/hg/vamp-plugin-sdk )
+  - em++ --version
 
 script:
   - ( cd examples/vamp-example-plugins && make test )
