--- a/generator/Makefile
+++ b/generator/Makefile
@@ -3,17 +3,21 @@ VAMPSDK_DIR	:= ../../vamp-plugin-sdk
 PIPERCPP_DIR    := ../../piper-vamp-cpp
 PIPER_DIR	:= ../../piper
 
-##!!! review
-INCFLAGS	:= -I$(PIPERCPP_DIR)/ext -I/usr/include/sord-0 -I/usr/include/serd-0 -I$(VAMPSDK_DIR) -I$(PIPERCPP_DIR) -I/usr/local/include
+INCFLAGS	:= -I$(PIPERCPP_DIR) -I$(PIPERCPP_DIR)/ext -I$(PIPERCPP_DIR)/ext/serd -I$(PIPERCPP_DIR)/ext/sord -I$(VAMPSDK_DIR) -I/usr/local/include
+
+OBJECTS		:= ./generator.o $(PIPERCPP_DIR)/ext/sord/sord-single.o
 
 CXXFLAGS	:= -Wall -Wextra -g3 -std=c++11 $(INCFLAGS)
+CFLAGS		:= -Wall -g3 $(INCFLAGS)
 
-LDFLAGS		:= $(VAMPSDK_DIR)/libvamp-hostsdk.a -lsord-0 -lserd-0
+LDFLAGS		:= $(VAMPSDK_DIR)/libvamp-hostsdk.a
 
 LDFLAGS		+= -ldl
 
 all:		../bin/piper-vamp-stub-generator
 
-../bin/piper-vamp-stub-generator:	./generator.cpp
-		$(CXX) $(CXXFLAGS) $^ -o $@ $(LDFLAGS)
+../bin/piper-vamp-stub-generator:	$(OBJECTS)
+		$(CXX) $^ -o $@ $(LDFLAGS)
 
+clean:
+		rm -f $(OBJECTS)
