Docs, parameterise node binary, update expected output for static info & category (+overdue update from copyright to rights)

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -79,6 +79,8 @@ SDK_SOURCES	:= \
 OTHER_SOURCES	:= \
 		$(PIPERCPP_DIR)/ext/json11/json11.cpp
 
+NODE            ?= node
+
 EM_MODULE_EXT	:= .js
 EM_MODULE_U_EXT	:= .umd.js
 EM_MODULE	:= $(MODULE_NAME)$(EM_MODULE_EXT)
@@ -146,7 +148,7 @@ $(SO_MODULE):	$(OBJECTS)
 		$(CXX) -o $@ $^ $(LDFLAGS)
 
 test:		em
-		node $(MY_DIR)/test/node-load-test.js $(shell pwd)/$(EM_MODULE)
+		$(NODE) $(MY_DIR)/test/node-load-test.js $(shell pwd)/$(EM_MODULE)
 
 clean:
 		rm -f $(OBJECTS)
