--- a/generator/Makefile
+++ b/generator/Makefile
@@ -7,8 +7,9 @@ INCFLAGS	:= -I$(PIPERCPP_DIR) -I$(PIPERCPP_DIR)/ext -I$(PIPERCPP_DIR)/ext/serd -
 
 OBJECTS		:= ./generator.o $(PIPERCPP_DIR)/ext/sord/sord-single.o
 
-CXXFLAGS	:= -Wall -Wextra -g3 -std=c++11 $(INCFLAGS)
-CFLAGS		:= -Wall -g3 -std=c99 $(INCFLAGS)
+ARCHFLAGS	:= -fpic -g3
+CXXFLAGS	:= -Wall -Wextra -std=c++11 $(ARCHFLAGS) $(INCFLAGS)
+CFLAGS		:= -Wall -std=c99 $(ARCHFLAGS) $(INCFLAGS)
 
 LDFLAGS		:= $(VAMPSDK_DIR)/libvamp-hostsdk.a
 
